[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Caladea-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/molecule/molecule_gui.gd" type="Script" id=2]
[ext_resource path="res://gui/Popup.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="molecule_gui" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
charge_enabled = false

[node name="in_panel_molecule" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="molecule" type="HBoxContainer" parent="in_panel_molecule"]
margin_top = 276.0
margin_right = 1024.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus_sign" type="Label" parent="in_panel_molecule/molecule"]
visible = false
margin_right = 510.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 2 )
text = "+"

[node name="Stoechiometrie" type="SpinBox" parent="in_panel_molecule/molecule"]
margin_right = 1024.0
margin_bottom = 24.0
hint_tooltip = "Permet de changer le nombre de mol√©cule."
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
max_value = 50.0
value = 1.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="in_panel_molecule"]
margin_top = 304.0
margin_right = 1024.0
margin_bottom = 324.0

[node name="suppr" type="Button" parent="in_panel_molecule/HBoxContainer"]
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "supprimer"

[node name="expliquer" type="Button" parent="in_panel_molecule/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "expliquer"

[node name="Popup" parent="." instance=ExtResource( 3 )]
margin_right = 1024.0
margin_bottom = 600.0

[connection signal="value_changed" from="in_panel_molecule/molecule/Stoechiometrie" to="." method="_on_Stoechiometrie_value_changed"]
